--- a/src/index.css
+++ b/src/index.css
@@ -402,3 +402,47 @@ margin-left: 20px;
 font-size: 20px;
 margin-left: 70px;
 }
+@media screen and (max-width:600px){
+  .nav{
+    position: sticky;
+    top: 0;
+    display: flex;
+    background-color: rgba(202, 98, 23, 0.204);
+    color: black;
+    margin-left: -10px;
+    margin-right: -687px;
+  z-index: 12;
+  }
+  .two{
+    position: relative;
+    left: 500px;
+    text-align: center;
+    margin-top: 30px;
+    font-size: 25px;
+    margin-left: -600px;
+    }
+    .three{
+      position: relative;
+      margin-left: -500px;
+      left: 500px;
+      }
+      #pla{
+        position: relative;
+        left: 500px;
+        }
+        .plac{
+        position: relative;
+        left: 700px;
+        margin-left: -700px;
+        }
+        #f1{
+          position: relative;
+          left: 500px;
+          margin-top: 50px;
+          }
+          .faq1{
+            position: relative;
+            left: 500px;
+            margin-left: -500px;
+          }
+}
